--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </div>
     </div>
     <p class="text-md mb-6 text-gray-300">
-      Join our vibrant community and unleash the power of QuantumDropperBot! For premium access or support, slide into our DMs at <a href="https://t.me/meta_familys" class="text-teal-400 hover:underline"> @YourUsername</a>.
+      Join our vibrant community and unleash the power of QuantumDropperBot! For premium access or support, slide into our DMs at <a href="https://t.me/meta_familys" class="text-teal-400 hover:underline"> @meta_familys</a>.
     </p>
     <a href="https://t.me/meta_server" class="inline-block bg-teal-500 hover:bg-teal-600 text-white font-bold py-2 px-4 rounded-full transition duration-300">
       Join Our Channel
